<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shade_white"
    tools:context=".TitleScreenActivity">

    <ImageView
        android:id="@+id/pokemon_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/pokemon_title"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/title_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/pokemon_title">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_game"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_marginRight="40dp"
            app:strokeColor="@color/black"
            app:strokeWidth="4dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/shade_white"
            android:layout_height="wrap_content"
            android:text="@string/new_game"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/load_game"
            android:padding="20dp"
            android:layout_width="wrap_content"
            app:strokeColor="@color/black"
            app:strokeWidth="4dp"
            android:backgroundTint="@color/shade_white"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/load_game"/>
    </LinearLayout>

    <TextView
        android:id="@+id/game_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/mobile_version"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_buttons" />

    <ImageView
        android:id="@+id/team_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/developers"
        android:src="@drawable/pokemon_team_title"/>

    <TextView
        android:id="@+id/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        android:text="@string/copyright_22_mr_sl_vp_at"
        android:textSize="11dp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>