<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/pokemart_potion_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/pokeball_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <LinearLayout
        android:id="@+id/potion_full_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/pokemart_potion_title"
        app:layout_constraintStart_toStartOf="@id/pokemart_potion_title"
        app:layout_constraintTop_toBottomOf="@id/pokemart_potion_title">

        <LinearLayout
            android:id="@+id/layout_potion"
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_marginBottom="200dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <ImageView
                android:id="@+id/potion_image"
                android:layout_width="102dp"
                android:layout_height="175dp"
                android:layout_weight="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pokeball_image" />

            <TextView
                android:id="@+id/potion_textview"
                android:layout_width="236dp"
                android:layout_height="175dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:padding="20dp"
                android:paddingStart="0dp"
                android:text="@string/poke_pokeball_text"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buy_sell_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buy_potion_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/shade_white"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/buy_text"
                android:textColor="@color/black"
                android:layout_weight="1"
                app:strokeColor="@color/black"
                app:strokeWidth="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sell_potion_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/shade_white"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/back_text"
                android:textColor="@color/black"
                android:layout_weight="1"
                app:strokeColor="@color/black"
                app:strokeWidth="4dp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>